--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ background-color: white;
 #middle{
 height: 800px;
 width: 1274px;
-background-color: grey;
+background-image: url('image/bg.webp);
 color: black;
 }
 #slider{
